Style: Style 견생연분/견생원수

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
       <div id="question1" class="question">
         <div class="question__page">1/12</div>
-        <div class="question__title"><mark>낯선 손님이 집에 놀러왔다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>낯선 손님이 집에 놀러왔다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(1, 0, 1)">일단 집으로<br>들어가 숨는다</a>
         </div>
@@ -76,7 +76,7 @@
       </div>
       <div id="question2" class="question">
         <div class="question__page">2/12</div>
-        <div class="question__title"><mark>산책을 하다가 갱얼쥐 친구를 만났다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>산책을 하다가 갱얼쥐 친구를 만났다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(2, 0, 1)">킁킁거리며 천천히<br>탐색전을 벌인다</a>
         </div>
@@ -86,7 +86,7 @@
       </div>
       <div id="question3" class="question">
         <div class="question__page">3/12</div>
-        <div class="question__title"><mark>주인이 조용히 자기만의 시간을 즐기고 있다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>주인이 조용히 자기만의 시간을 즐기고 있다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(3, 0, 1)">주인 옆에 벌러덩 누워<br>나만의 시간을 즐긴다</a>
         </div>
@@ -96,7 +96,7 @@
       </div>
       <div id="question4" class="question">
         <div class="question__page">4/12</div>
-        <div class="question__title"><mark>나른한 오후를 지나고 나가는 산책.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>나른한 오후를 지나고 나가는 산책.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(4, 1, 1)">상쾌한 공기를 즐기며<br>바깥향기를 음미한다</a>
         </div>
@@ -106,7 +106,7 @@
       </div>
       <div id="question5" class="question">
         <div class="question__page">5/12</div>
-        <div class="question__title"><mark>차를 타고 한참을 가서 낯선 장소에 도착했다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>차를 타고 한참을 가서 낯선 장소에 도착했다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(5, 1, 1)">무서워서 한발한발<br>조심히 내딛는다</a>
         </div>
@@ -116,7 +116,7 @@
       </div>
       <div id="question6" class="question">
         <div class="question__page">6/12</div>
-        <div class="question__title"><mark>주인이 한번도 먹어보지 못한 간식을 준다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>주인이 한번도 먹어보지 못한 간식을 준다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(6, 1, 1)">집으로 가져와서 먹어도<br>괜찮은지 확인한다</a>
         </div>
@@ -126,7 +126,7 @@
       </div>
       <div id="question7" class="question">
         <div class="question__page">7/12</div>
-        <div class="question__title"><mark>주인이 간식도 없이 앉으라고 한다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>주인이 간식도 없이 앉으라고 한다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(7, 2, 1)">간식이 없으면<br>눈길도 주지 않는다</a>
         </div>
@@ -136,7 +136,7 @@
       </div>
       <div id="question8" class="question">
         <div class="question__page">8/12</div>
-        <div class="question__title"><mark>주인이 별것 아닌것 같은 일로 혼을 낸다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>주인이 별것 아닌것 같은 일로 혼을 낸다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(8, 2, 1)">내가 맞다면서<br>왈왈 짖는다</a>
         </div>
@@ -146,7 +146,7 @@
       </div>
       <div id="question9" class="question">
         <div class="question__page">9/12</div>
-        <div class="question__title"><mark>주인이 어제 고백했다 차였다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>주인이 어제 고백했다 차였다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(9, 2, 1)">조용히 주인옆에서<br>괜찮다고 위로한다</a>
         </div>
@@ -156,7 +156,7 @@
       </div>
       <div id="question10" class="question">
         <div class="question__page">10/12</div>
-        <div class="question__title"><mark>나른한 주말 아침, 주인이 일어나질 않는다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>나른한 주말 아침, 주인이 일어나질 않는다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(10, 3, 1)">주인 얼굴을 핥으며<br>일어나라고한다</a>
         </div>
@@ -166,7 +166,7 @@
       </div>
       <div id="question11" class="question">
         <div class="question__page">11/12</div>
-        <div class="question__title"><mark>배변활동은 강아지에게 필수적이다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>배변활동은 강아지에게 필수적이다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(11, 3, 1)">매일 정해진 시간에<br>밖에서 배변한다</a>
         </div>
@@ -176,7 +176,7 @@
       </div>
       <div id="question12" class="question">
         <div class="question__page">12/12</div>
-        <div class="question__title"><mark>주인과 신나게 한바탕 뛰놀았다.<br><b>당신은?</b></mark></div>
+        <div class="question__title"><mark>주인과 신나게 한바탕 뛰놀았다.<br><b>&nbsp당신은?</b></mark></div>
         <div class="question__container">
           <a class="question__button" onclick="question(12, 3, 1)">흩어져있는 장난감을<br>내 집으로 가져온다</a>
         </div>
@@ -218,13 +218,13 @@
       </div>
     </div>
     <div class="result">
-      <!-- <div class="result__title"></div> -->
+      <div class="result__textbox">
+        <span class="result__title"></span>
+      </div>
       <div class="result__image"></div>
       <div class="result__textbox">
         <div class='result__text--header'></div>
-        <div class="result__text">
-          어쩌고저쩌고어쩌고저쩌어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고어쩌고저쩌고
-        </div>
+        <div class="result__text"></div>
       </div>
       <div class="result__compare">
         <div class="result__compare--box">
