--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     gtag('config', 'G-70R9RF4RBM');
   </script>
   <!-- 애드디스 (SNS 공유) -->
-  <script type="text/javascript" src="https://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -31,7 +31,6 @@
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <title>견생테스트: 나는 어떤 강아지일까?</title>
 </head>
-
 <body>
   <div class="box">
     <div class="main">
@@ -248,6 +247,11 @@
     <div class="box__logo">
       <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
     </div>
+    <ins class="kakao_ad_area" style="display:none;"
+ data-ad-unit    = "DAN-LFEtM2G4QPiXW0Op"
+ data-ad-width   = "320"
+ data-ad-height  = "50"></ins>
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
   </div>
 </body>
 <!-- Copyright (c) 2021 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
