Chore: Add div class=ad

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <title>견생테스트: 나는 어떤 강아지일까?</title>
 </head>
+
 <body>
   <div class="box">
     <div class="main">
@@ -247,11 +248,10 @@
     <div class="box__logo">
       <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
     </div>
-    <ins class="kakao_ad_area" style="display:none;"
- data-ad-unit    = "DAN-LFEtM2G4QPiXW0Op"
- data-ad-width   = "320"
- data-ad-height  = "50"></ins>
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    <div class="ad">
+      <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-LFEtM2G4QPiXW0Op" data-ad-width="320" data-ad-height="50"></ins>
+      <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+    </div>
   </div>
 </body>
 <!-- Copyright (c) 2021 by Aaron Vanston (https://codepen.io/aaronvanston/pen/yNYOXR)
