Style: Change media query to 360px

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-70R9RF4RBM"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -14,21 +13,30 @@
 
     gtag('config', 'G-70R9RF4RBM');
   </script>
-  <!-- 애드디스 (SNS 공유) -->
-  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
+
+  <!-- Addthis (SNS) -->
+  <!-- <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script> -->
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- Favicon / Meta Data -->
   <link rel="icon" href="./img/favicon.ico">
   <link rel="shortcut icon" href="./img/favicon.ico">
   <meta property="og:image" content="./img/kakao.png">
   <meta property="og:title" content="견생테스트: 나는 어떤 강아지일까?">
   <meta property="og:description" content="MBTI와 얼굴로 알아보는 견생테스트">
+
+  <!-- CSS / JS -->
   <link rel="stylesheet" href="style.css">
   <script type="text/javascript" src="./lib/index.js"></script>
+
+  <!-- JQuery / Teachable Machine -->
   <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+
   <title>견생테스트: 나는 어떤 강아지일까?</title>
 </head>
 
