Chore: Change ad to bottom and remove logo

--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
         <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
       </div>
     </div>
-    <div class="box__logo">
+    <!-- <div class="box__logo">
       <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
-    </div>
+    </div> -->
     <div class="ad">
       <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-LFEtM2G4QPiXW0Op" data-ad-width="320" data-ad-height="50"></ins>
       <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
