Add: Add alert message

--- a/index.html
+++ b/index.html
@@ -205,8 +205,9 @@
           </div>
         </div>
         <div class="picture__upload--text">
-          <span>사진을 올려주세요!</span>
+          <span>자신의 사진을 올려주세요!</span>
         </div>
+        <div class="picture__upload--alert">* 사진은 결과에 영향을 미치며, 저장되지 않습니다 *</div>
       </div>
       <div class="picture__container">
         <a class="picture__button" type="button" onclick="$('.picture__upload--input').trigger( 'click' )">사진 첨부</a>
