Chore: Move Kakao script to top

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 
     gtag('config', 'G-70R9RF4RBM');
   </script>
+  <!-- Kakao Adfit -->
+  <script async type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js"></script>
   <!-- Teachable Machine -->
   <script async src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script async src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
-  <!-- Addthis (SNS) -->
+  <!-- Addthis -->
   <script async type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
 
   <!-- JQuery -->
@@ -240,7 +242,7 @@
           <div class="result__image--text"></div>
         </div>
       </div>
-      <!-- Addthis (SNS) -->
+      <!-- Addthis (Inline) -->
       <div class="addthis_inline_share_toolbox"></div>
       <div class="result__container">
         <a class="result__button" type="button" onclick="setTimeout(function(){location.reload()}, 300)">다시하기</a>
@@ -249,10 +251,9 @@
         <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
       </div>
     </div>
-    <!-- Kakao Adfit -->
     <div class="ad">
+      <!-- Kakao Adfit (Inline) -->
       <ins class="kakao_ad_area" style="display:none;" data-ad-unit="DAN-LFEtM2G4QPiXW0Op" data-ad-width="320" data-ad-height="50"></ins>
-      <script async type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js"></script>
     </div>
   </div>
 </body>
