--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-70R9RF4RBM"></script>
-  <script async>
+  <script defer src="https://www.googletagmanager.com/gtag/js?id=G-70R9RF4RBM"></script>
+  <script defer>
     window.dataLayer = window.dataLayer || [];
 
     function gtag() {
@@ -14,12 +14,12 @@
     gtag('config', 'G-70R9RF4RBM');
   </script>
   <!-- Kakao Adfit -->
-  <script async type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js"></script>
+  <script defer type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js"></script>
   <!-- Teachable Machine -->
-  <script async src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
-  <script async src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <!-- Addthis -->
-  <script async type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
+  <script defer type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
 
   <!-- JQuery -->
   <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
