Chore: Remove type button for buttons

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="picture__upload--alert">* 사진은 결과에 영향을 미치며, 저장되지 않습니다 *</div>
       </div>
       <div class="picture__container">
-        <div class="picture__button" type="button" onclick="$('.picture__upload--input').trigger( 'click' )">사진 첨부</div>
+        <div class="picture__button" onclick="$('.picture__upload--input').trigger( 'click' )">사진 첨부</div>
       </div>
       <div class="picture__container">
         <div class="picture__button" onclick="init()">결과 보기</div>
@@ -245,7 +245,7 @@
       <!-- Addthis (Inline) -->
       <div class="addthis_inline_share_toolbox"></div>
       <div class="result__container">
-        <div class="result__button" type="button" onclick="setTimeout(function(){location.reload()}, 300)">다시하기</div>
+        <div class="result__button" onclick="setTimeout(function(){location.reload()}, 300)">다시하기</div>
       </div>
       <div class="result__logo">
         <a href="https://iamdooddi.tistory.com/" target="_blank"><img src="./img/main__logo.png" alt="main__logo"></a>
