--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     gtag('config', 'G-70R9RF4RBM');
   </script>
   <!-- Kakao Adfit -->
-  <script defer src="//t1.daumcdn.net/kas/static/ba.min.js"></script>
+  <!-- <script defer src="//t1.daumcdn.net/kas/static/ba.min.js"></script> -->
   <!-- Teachable Machine -->
   <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <!-- Addthis -->
-  <script defer src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
+  <!-- <script defer src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script> -->
 
   <!-- JQuery -->
   <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -227,18 +227,18 @@
       <div class="result__textbox">
         <span class="result__title"></span>
       </div>
-      <div class="result__image"></div>
+      <div class="result__image"><img src="" alt=""></div>
       <div class="result__textbox">
         <div class='result__text--header'></div>
         <div class="result__text"></div>
       </div>
       <div class="result__compare">
         <div class="result__compare--box">
-          <div class="result__image--small"></div>
+          <div class="result__image--small"><img src="" alt=""></div>
           <div class="result__image--text"></div>
         </div>
         <div class="result__compare--box">
-          <div class="result__image--small"></div>
+          <div class="result__image--small"><img src="" alt=""></div>
           <div class="result__image--text"></div>
         </div>
       </div>
