--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
           <div class="result__image--text"></div>
         </div>
       </div>
-      <div class="result__alert">* 결과는 사진과 답변을 조합하여 산출되며&nbsp;<br>&nbsp;절대적인 테스트가 아님을 알려드립니다 *</div>
+      <div class="result__alert">* 결과는 사진과 답변을 조합하여 산출되며&nbsp;<br>&nbsp;절대적인 테스트가 아님을 알려드립니다 *<br><br>*조코딩님의 '동물상테스트만들기'<br>를 참고하여 만들었음을 알려드립니다*</div>
       <!-- Addthis (Inline) -->
       <div class="addthis_inline_share_toolbox"></div>
       <div class="result__container">
