--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     gtag('config', 'G-70R9RF4RBM');
   </script>
   <!-- Kakao Adfit -->
-  <script defer src="//t1.daumcdn.net/kas/static/ba.min.js"></script>
+  <!-- <script defer src="//t1.daumcdn.net/kas/static/ba.min.js"></script> -->
   <!-- Teachable Machine -->
   <script defer src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
   <!-- Addthis -->
-  <script defer src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script>
+  <!-- <script defer src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-6004f93c009e68ee"></script> -->
 
   <!-- JQuery -->
   <script class="jsbin" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
@@ -242,7 +242,7 @@
           <div class="result__image--text"></div>
         </div>
       </div>
-      <div class="result__alert">* 결과는 사진과 답변을 조합하여 산출되며&nbsp;<br>&nbsp;절대적인 테스트가 아님을 알려드립니다 *<br><br>* 조코딩님의 '동물상테스트만들기'<br>를 참고하여 만들었음을 알려드립니다 *</div>
+      <div class="result__alert">* 결과는 사진과 답변을 조합하여 산출되며&nbsp;<br>&nbsp;절대적인 테스트가 아님을 알려드립니다 *<br><br><a target="_blank" href="https://www.youtube.com/channel/UCQNE2JmbasNYbjGAcuBiRRg">* 제작도움: 조코딩 유튜브 채널 *</a></div>
       <!-- Addthis (Inline) -->
       <div class="addthis_inline_share_toolbox"></div>
       <div class="result__container">
